--- a/Sandra.UI.WF.Chess/Properties/Resources.resx
+++ b/Sandra.UI.WF.Chess/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="Sandra" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Sandra.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="settings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>settings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
