Add UIAction bindings for Undo and Redo.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -34,12 +34,14 @@
     "PreviousLine": "Previous line",
     "PreviousMove": "Previous move",
     "PromoteLine": "Promote line",
+    "Redo": "Redo",
     "Save": "Save",
     "SelectAll": "Select All",
     "ShowDefaultSettingsFile": "Show default settings",
     "StartOfGame": "Start of game",
     "UseLongAlgebraicNotation": "Use long algebraic notation",
     "UsePGNPieceSymbols": "Use PGN notation",
+    "Undo": "Undo",
     "View": "View",
     "ZoomIn": "Zoom in",
     "ZoomOut": "Zoom out",
