--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -34,12 +34,14 @@
     "PreviousLine": "Vorige variant",
     "PreviousMove": "Vorige zet",
     "PromoteLine": "Variant promoveren",
+    "Redo": "Opnieuw",
     "Save": "Opslaan",
     "SelectAll": "Alles selecteren",
     "ShowDefaultSettingsFile": "Standaard instellingen tonen",
     "StartOfGame": "Naar begin partij",
     "UseLongAlgebraicNotation": "Lange notatie gebruiken",
     "UsePGNPieceSymbols": "PGN notatie gebruiken",
+    "Undo": "Ongedaan maken",
     "View": "Weergave",
     "ZoomIn": "Inzoomen",
     "ZoomOut": "Uitzoomen",
