Add Dutch translations.

--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -56,6 +56,25 @@
     "ConsoleKeyHome": "Home",
     "ConsoleKeyEnd": "End",
     "ConsoleKeyPageDown": "PageDown",
-    "ConsoleKeyPageUp": "PageUp"
+    "ConsoleKeyPageUp": "PageUp",
+    "JsonErrorUnexpectedSymbol": "Onbekend symbool '{0}'",
+    "JsonErrorUnterminatedMultiLineComment": "Multi-regel commentaar niet afgesloten met '*/' karakters",
+    "JsonErrorUnterminatedString": "Stringwaarde niet afgesloten met een '\"' karakter",
+    "JsonErrorUnrecognizedEscapeSequence": "Escape karakter reeks niet herkend ('{0}')",
+    "JsonErrorIllegalControlCharacterInString": "Illegaal stuurkarakter '{0}' binnen stringwaarde",
+    "JsonErrorExpectedEof": "Einde van bestand verwacht",
+    "JsonErrorUnexpectedEofInObject": "Onverwacht einde van bestand, in plaats daarvan '}' verwacht",
+    "JsonErrorUnexpectedEofInArray": "Onverwacht einde van bestand, in plaats daarvan ']' verwacht",
+    "JsonErrorControlSymbolInObject": "'}' verwacht",
+    "JsonErrorControlSymbolInArray": "']' verwacht",
+    "JsonErrorInvalidPropertyKey": "Eigenschap identificatie is ongeldig",
+    "JsonErrorPropertyKeyAlreadyExists": "Eigenschap identificatie '{0}' bestaat al in object",
+    "JsonErrorMissingPropertyKey": "Eigenschap identificatie ontbreekt",
+    "JsonErrorMissingValue": "Waarde ontbreekt",
+    "JsonErrorUnrecognizedValue": "Waarde '{0}' niet herkend",
+    "JsonErrorMultiplePropertyKeySections": "Onverwacht karakter ':', in plaats daarvan ',' of '}' verwacht",
+    "JsonErrorMultiplePropertyKeys": "':' verwacht",
+    "JsonErrorMultipleValues": "',' verwacht",
+    "RootValueShouldBeObjectTypeError": "Object ('{{ \"a\" = 1, \"b\" = 2, ... }}') verwacht",
   }
 }
