--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -82,6 +82,7 @@
     "IntegerTypeError": "Expected integer value for {0}, but found {1}",
     "StringTypeError": "Expected string value for {0}, but found {1}",
     "MapTypeError": "Expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}') for {0}, but found {1}",
+    "RangedIntegerTypeError": "Expected integer value between {2} and {3} for {0}, but found {1}",
     "OpaqueColorTypeError": "Expected string in the HTML color format (e.g. \"#808000\", or \"#DC143C\") for {0}, but found {1}",
     "FileNameTypeError": "Expected valid file name for {0}, but found {1}",
     "SubFolderNameTypeError": "Expected valid subfolder name for {0}, but found {1}",
