Generate informative message for EnumerationTypeError and KeyedSetTypeError.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -82,6 +82,10 @@
     "IntegerTypeError": "Expected integer value for {0}, but found {1}",
     "StringTypeError": "Expected string value for {0}, but found {1}",
     "MapTypeError": "Expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}') for {0}, but found {1}",
+    "NoLegalValues": "Found value {1}, but there exist no legal values for {0}",
+    "EnumerateWithOr": "{0} or {1}",
+    "EnumerationTypeError": "Expected {2} for {0}, but found {1}",
+    "KeyedSetTypeError": "Expected {2} for {0}, but found {1}",
     "RangedIntegerTypeError": "Expected integer value between {2} and {3} for {0}, but found {1}",
     "OpaqueColorTypeError": "Expected string in the HTML color format (e.g. \"#808000\", or \"#DC143C\") for {0}, but found {1}",
     "FileNameTypeError": "Expected valid file name for {0}, but found {1}",
