--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -77,6 +77,8 @@
     "JsonErrorMultiplePropertyKeys": "':' expected",
     "JsonErrorMultipleValues": "',' expected",
     "RootValueShouldBeObjectTypeError": "Expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
+    "JsonArray": "a value array ('[1, 2, ...]')",
+    "JsonObject": "an object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "an undefined value",
     "BooleanTypeError": "Expected 'false' or 'true' value for {0}, but found {1}",
     "IntegerTypeError": "Expected integer value for {0}, but found {1}",
@@ -90,6 +92,7 @@
     "OpaqueColorTypeError": "Expected string in the HTML color format (e.g. \"#808000\", or \"#DC143C\") for {0}, but found {1}",
     "FileNameTypeError": "Expected valid file name for {0}, but found {1}",
     "SubFolderNameTypeError": "Expected valid subfolder name for {0}, but found {1}",
-    "TrimmedStringTypeError": "Expected string value which contains at least one non white-space character for {0}, but found {1}"
+    "TrimmedStringTypeError": "Expected string value which contains at least one non white-space character for {0}, but found {1}",
+    "TranslationDictionaryTypeError": "Expected string translations for {0}, but found {2} at key {1}"
   }
 }
