Add a LocalizedString for new developer tools main menu item, plus English and Dutch translations.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -11,6 +11,7 @@
     "Cut": "Cut",
     "DeleteLine": "Delete line",
     "DemoteLine": "Demote line",
+    "DeveloperTools": "Tools",
     "EditPreferencesFile": "Edit preferences",
     "EndOfGame": "End of game",
     "ErrorLocation": "{0} at line {1}, position {2}",
