--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -11,6 +11,7 @@
     "Cut": "Knippen",
     "DeleteLine": "Variant verwijderen",
     "DemoteLine": "Variant degraderen",
+    "DeveloperTools": "Gereedschappen",
     "EditPreferencesFile": "Wijzig voorkeuren",
     "EndOfGame": "Naar einde partij",
     "ErrorLocation": "{0} op regel {1}, positie {2}",
