Add new EditCurrentLanguage UIAction with its resources and localization.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -12,6 +12,7 @@
     "DeleteLine": "Delete line",
     "DemoteLine": "Demote line",
     "DeveloperTools": "Tools",
+    "EditCurrentLanguage": "Edit current language",
     "EditPreferencesFile": "Edit preferences",
     "EndOfGame": "End of game",
     "ErrorLocation": "{0} at line {1}, position {2}",
