--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -12,6 +12,7 @@
     "DeleteLine": "Variant verwijderen",
     "DemoteLine": "Variant degraderen",
     "DeveloperTools": "Gereedschappen",
+    "EditCurrentLanguage": "Bewerk huidige taal",
     "EditPreferencesFile": "Wijzig voorkeuren",
     "EndOfGame": "Naar einde partij",
     "ErrorLocation": "{0} op regel {1}, positie {2}",
