--- a/Sandra.UI.WF.Chess/Properties/Resources.resx
+++ b/Sandra.UI.WF.Chess/Properties/Resources.resx
@@ -154,4 +154,7 @@
   <data name="undo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>undo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="speech" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>speech.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
