Add localization for NoErrorsMessage.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -30,6 +30,7 @@
     "NewGame": "New game",
     "NextLine": "Next line",
     "NextMove": "Next move",
+    "NoErrorsMessage": "(No errors)",
     "Paste": "Paste",
     "PieceSymbols": "NBRQK",
     "PreviousLine": "Previous line",
