--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -30,6 +30,7 @@
     "NewGame": "Nieuwe partij",
     "NextLine": "Volgende variant",
     "NextMove": "Volgende zet",
+    "NoErrorsMessage": "(Geen meldingen)",
     "Paste": "Plakken",
     "PieceSymbols": "PLTDK",
     "PreviousLine": "Vorige variant",
