Review Dutch translations.

--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -12,8 +12,8 @@
     "DeleteLine": "Variant verwijderen",
     "DemoteLine": "Variant degraderen",
     "DeveloperTools": "Gereedschappen",
-    "EditCurrentLanguage": "Bewerk huidige taal",
-    "EditPreferencesFile": "Wijzig voorkeuren",
+    "EditCurrentLanguage": "Huidige taal bewerken",
+    "EditPreferencesFile": "Voorkeuren wijzigen",
     "EndOfGame": "Naar einde partij",
     "ErrorLocation": "{0} op regel {1}, positie {2}",
     "Exit": "Afsluiten",
@@ -24,8 +24,8 @@
     "FlipBoard": "Bord omkeren",
     "Game": "Partij",
     "GoTo": "Navigeren",
-    "GoToNextLocation": "Ga naar volgende locatie",
-    "GoToPreviousLocation": "Ga naar vorige locatie",
+    "GoToNextLocation": "Naar volgende locatie",
+    "GoToPreviousLocation": "Naar vorige locatie",
     "Help": "Help",
     "LastMove": "Laatste zet",
     "Moves": "Zetten",
