Attach auto-hiding main menu to SettingsForm.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -12,6 +12,7 @@
     "DeleteLine": "Delete line",
     "DemoteLine": "Demote line",
     "DeveloperTools": "Tools",
+    "Edit": "Edit",
     "EditCurrentLanguage": "Edit current language",
     "EditPreferencesFile": "Edit preferences",
     "EndOfGame": "End of game",
