--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -12,6 +12,7 @@
     "DeleteLine": "Variant verwijderen",
     "DemoteLine": "Variant degraderen",
     "DeveloperTools": "Gereedschappen",
+    "Edit": "Bewerken",
     "EditCurrentLanguage": "Huidige taal bewerken",
     "EditPreferencesFile": "Voorkeuren wijzigen",
     "EndOfGame": "Naar einde partij",
