Move more shared resources (localized string keys, 2 general menu icons) to AppTemplate.

--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -11,7 +11,6 @@
     "Cut": "Knippen",
     "DeleteLine": "Variant verwijderen",
     "DemoteLine": "Variant degraderen",
-    "DeveloperTools": "Gereedschappen",
     "Edit": "Bewerken",
     "EditCurrentLanguage": "Huidige taal bewerken",
     "EditPreferencesFile": "Voorkeuren wijzigen",
@@ -44,6 +43,7 @@
     "SelectAll": "Alles selecteren",
     "ShowDefaultSettingsFile": "Standaard instellingen tonen",
     "StartOfGame": "Naar begin partij",
+    "Tools": "Gereedschappen",
     "UseLongAlgebraicNotation": "Lange notatie gebruiken",
     "UsePGNPieceSymbols": "PGN notatie gebruiken",
     "Undo": "Ongedaan maken",
