--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -11,7 +11,6 @@
     "Cut": "Cut",
     "DeleteLine": "Delete line",
     "DemoteLine": "Demote line",
-    "DeveloperTools": "Tools",
     "Edit": "Edit",
     "EditCurrentLanguage": "Edit current language",
     "EditPreferencesFile": "Edit preferences",
@@ -44,6 +43,7 @@
     "SelectAll": "Select All",
     "ShowDefaultSettingsFile": "Show default settings",
     "StartOfGame": "Start of game",
+    "Tools": "Tools",
     "UseLongAlgebraicNotation": "Use long algebraic notation",
     "UsePGNPieceSymbols": "Use PGN notation",
     "Undo": "Undo",
