Add shared definition for Close UIAction.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -39,6 +39,7 @@
     "ConsoleKeyPageDown": "PageDown",
     "ConsoleKeyPageUp": "PageUp",
     "About": "About SandraChess",
+    "Close": "Close",
     "Copy": "Copy",
     "Credits": "Show credits",
     "Cut": "Cut",
