--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -39,6 +39,7 @@
     "ConsoleKeyPageDown": "PageDown",
     "ConsoleKeyPageUp": "PageUp",
     "About": "Over SandraChess",
+    "Close": "Sluiten",
     "Copy": "Kopiëren",
     "Credits": "Dankwoord (Engels)",
     "Cut": "Knippen",
