Use shorter Dutch translations for main menu items to leave more room for the Form caption.

--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -58,9 +58,9 @@
     "Save": "Opslaan",
     "SelectAll": "Alles selecteren",
     "ShowDefaultSettingsFile": "Standaard instellingen tonen",
-    "Tools": "Gereedschappen",
+    "Tools": "Extra",
     "Undo": "Ongedaan maken",
-    "View": "Weergave",
+    "View": "Beeld",
     "ZoomIn": "Inzoomen",
     "ZoomOut": "Uitzoomen",
     "JsonErrorUnexpectedSymbol": "Onbekend symbool '{0}'",
