Add keys and translations for querying if changes must be saved before closing the window.

--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -56,10 +56,12 @@
     "Paste": "Plakken",
     "Redo": "Opnieuw",
     "Save": "Opslaan",
+    "SaveChangesQuery": "'{0}' bevat wijzigingen die nog niet zijn opgeslagen en die verloren gaan als dit venster wordt gesloten. Alsnog opslaan?",
     "SelectAll": "Alles selecteren",
     "ShowDefaultSettingsFile": "Standaard instellingen tonen",
     "Tools": "Extra",
     "Undo": "Ongedaan maken",
+    "UnsavedChangesTitle": "Opslaan wijzigingen",
     "View": "Beeld",
     "ZoomIn": "Inzoomen",
     "ZoomOut": "Uitzoomen",
