--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -56,10 +56,12 @@
     "Paste": "Paste",
     "Redo": "Redo",
     "Save": "Save",
+    "SaveChangesQuery": "'{0}' contains unsaved changes which will be lost if this window is closed. Save changes?",
     "SelectAll": "Select All",
     "ShowDefaultSettingsFile": "Show default settings",
     "Tools": "Tools",
     "Undo": "Undo",
+    "UnsavedChangesTitle": "Save changes",
     "View": "View",
     "ZoomIn": "Zoom in",
     "ZoomOut": "Zoom out",
