Add menu items to create or open PGN files.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -17,8 +17,10 @@
     "LastMove": "Last move",
     "Moves": "Moves",
     "NewGame": "New game",
+    "NewGameFile": "New game file",
     "NextLine": "Next line",
     "NextMove": "Next move",
+    "OpenGameFile": "Open game file",
     "PieceSymbols": "NBRQK",
     "PreviousLine": "Previous line",
     "PreviousMove": "Previous move",
