--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -17,8 +17,10 @@
     "LastMove": "Laatste zet",
     "Moves": "Zetten",
     "NewGame": "Nieuwe partij",
+    "NewGameFile": "Nieuw partijen bestand",
     "NextLine": "Volgende variant",
     "NextMove": "Volgende zet",
+    "OpenGameFile": "Partijen bestand openen",
     "PieceSymbols": "PLTDK",
     "PreviousLine": "Vorige variant",
     "PreviousMove": "Vorige zet",
