Use 'Untitled' localized string for new files that have never been saved.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -64,6 +64,7 @@
     "Tools": "Tools",
     "Undo": "Undo",
     "UnsavedChangesTitle": "Save changes",
+    "Untitled": "Untitled",
     "View": "View",
     "ZoomIn": "Zoom in",
     "ZoomOut": "Zoom out",
