--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -64,6 +64,7 @@
     "Tools": "Extra",
     "Undo": "Ongedaan maken",
     "UnsavedChangesTitle": "Opslaan wijzigingen",
+    "Untitled": "Naamloos",
     "View": "Beeld",
     "ZoomIn": "Inzoomen",
     "ZoomOut": "Uitzoomen",
