Implement save-as action using FileExtension and FileExtensionLocalizedKey from the syntax descriptors.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -21,6 +21,7 @@
     "NextLine": "Next line",
     "NextMove": "Next move",
     "OpenGameFile": "Open game file",
+    "PGNFiles": "Portable game notation files",
     "PieceSymbols": "NBRQK",
     "PreviousLine": "Previous line",
     "PreviousMove": "Previous move",
@@ -41,6 +42,7 @@
     "ConsoleKeyPageDown": "PageDown",
     "ConsoleKeyPageUp": "PageUp",
     "About": "About SandraChess",
+    "AllFiles": "All files",
     "Close": "Close",
     "Copy": "Copy",
     "Credits": "Show credits",
@@ -54,6 +56,7 @@
     "GoToNextLocation": "Go to next location",
     "GoToPreviousLocation": "Go to previous location",
     "Help": "Help",
+    "JsonFiles": "Json files",
     "NoErrorsMessage": "(No errors)",
     "Paste": "Paste",
     "Redo": "Redo",
