--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -21,6 +21,7 @@
     "NextLine": "Volgende variant",
     "NextMove": "Volgende zet",
     "OpenGameFile": "Partijen bestand openen",
+    "PGNFiles": "Portable game notation bestanden",
     "PieceSymbols": "PLTDK",
     "PreviousLine": "Vorige variant",
     "PreviousMove": "Vorige zet",
@@ -41,6 +42,7 @@
     "ConsoleKeyPageDown": "PageDown",
     "ConsoleKeyPageUp": "PageUp",
     "About": "Over SandraChess",
+    "AllFiles": "Alle bestanden",
     "Close": "Sluiten",
     "Copy": "Kopiëren",
     "Credits": "Dankwoord (Engels)",
@@ -54,6 +56,7 @@
     "GoToNextLocation": "Naar volgende locatie",
     "GoToPreviousLocation": "Naar vorige locatie",
     "Help": "Help",
+    "JsonFiles": "Json bestanden",
     "NoErrorsMessage": "(Geen meldingen)",
     "Paste": "Plakken",
     "Redo": "Opnieuw",
