Rename all occurrences of PGN in identifiers to Pgn.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -21,14 +21,14 @@
     "NextLine": "Next line",
     "NextMove": "Next move",
     "OpenGameFile": "Open game file",
-    "PGNFiles": "Portable game notation files",
+    "PgnFiles": "Portable game notation files",
     "PieceSymbols": "NBRQK",
     "PreviousLine": "Previous line",
     "PreviousMove": "Previous move",
     "PromoteLine": "Promote line",
     "StartOfGame": "Start of game",
     "UseLongAlgebraicNotation": "Use long algebraic notation",
-    "UsePGNPieceSymbols": "Use PGN notation",
+    "UsePgnPieceSymbols": "Use PGN notation",
     "ConsoleKeyCtrl": "Ctrl",
     "ConsoleKeyShift": "Shift",
     "ConsoleKeyAlt": "Alt",
