--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -21,14 +21,14 @@
     "NextLine": "Volgende variant",
     "NextMove": "Volgende zet",
     "OpenGameFile": "Partijen bestand openen",
-    "PGNFiles": "Portable game notation bestanden",
+    "PgnFiles": "Portable game notation bestanden",
     "PieceSymbols": "PLTDK",
     "PreviousLine": "Vorige variant",
     "PreviousMove": "Vorige zet",
     "PromoteLine": "Variant promoveren",
     "StartOfGame": "Naar begin partij",
     "UseLongAlgebraicNotation": "Lange notatie gebruiken",
-    "UsePGNPieceSymbols": "PGN notatie gebruiken",
+    "UsePgnPieceSymbols": "PGN notatie gebruiken",
     "ConsoleKeyCtrl": "Ctrl",
     "ConsoleKeyShift": "Shift",
     "ConsoleKeyAlt": "Alt",
