Add two actions to open folders, available in developer mode.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -58,6 +58,8 @@
     "Help": "Help",
     "JsonFiles": "Json files",
     "NoErrorsMessage": "(No errors)",
+    "OpenExecutableFolder": "Open executable folder",
+    "OpenLocalAppDataFolder": "Open local application data folder",
     "Paste": "Paste",
     "Redo": "Redo",
     "Save": "Save",
