Report unrecognized property keys using new UnrecognizedPropertyKeyTypeError class.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -96,12 +96,13 @@
     "JsonArray": "a value array ('[1, 2, ...]')",
     "JsonObject": "an object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "an undefined value",
+    "EnumerateWithOr": "{0} or {1}",
+    "UnrecognizedPropertyKeyTypeError": "Unrecognized key {0} in object",
     "BooleanTypeError": "Expected 'false' or 'true' value for {0}, but found {1}",
     "IntegerTypeError": "Expected integer value for {0}, but found {1}",
     "StringTypeError": "Expected string value for {0}, but found {1}",
     "MapTypeError": "Expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}') for {0}, but found {1}",
     "NoLegalValues": "Found value {1}, but there exist no legal values for {0}",
-    "EnumerateWithOr": "{0} or {1}",
     "EnumerationTypeError": "Expected {2} for {0}, but found {1}",
     "KeyedSetTypeError": "Expected {2} for {0}, but found {1}",
     "RangedIntegerTypeError": "Expected integer value between {2} and {3} for {0}, but found {1}",
