--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -96,12 +96,13 @@
     "JsonArray": "een waardereeks ('[1, 2, ...]')",
     "JsonObject": "een object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "een ongedefinieerde waarde",
+    "EnumerateWithOr": "{0} of {1}",
+    "UnrecognizedPropertyKeyTypeError": "Eigenschap identificatie {0} in object niet herkend",
     "BooleanTypeError": "'false' of 'true' waarde voor eigenschap {0} verwacht, maar er staat {1}",
     "IntegerTypeError": "Geheel getal voor eigenschap {0} verwacht, maar er staat {1}",
     "StringTypeError": "Stringwaarde voor eigenschap {0} verwacht, maar er staat {1}",
     "MapTypeError": "Object ('{{ \"a\" = 1, \"b\" = 2, ... }}') voor eigenschap {0} verwacht, maar er staat {1}",
     "NoLegalValues": "Er staat waarde {1}, maar er bestaan geen geldige waarden voor eigenschap {0}",
-    "EnumerateWithOr": "{0} of {1}",
     "EnumerationTypeError": "Waarde(n) {2} voor eigenschap {0} verwacht, maar er staat {1}",
     "KeyedSetTypeError": "Waarde(n) {2} voor eigenschap {0} verwacht, maar er staat {1}",
     "RangedIntegerTypeError": "Geheel getal tussen {2} en {3} voor eigenschap {0} verwacht, maar er staat {1}",
