Convert all error messages to lower case.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -74,41 +74,41 @@
     "View": "View",
     "ZoomIn": "Zoom in",
     "ZoomOut": "Zoom out",
-    "JsonErrorUnexpectedSymbol": "Unexpected symbol '{0}'",
-    "JsonErrorUnterminatedMultiLineComment": "Unterminated multi-line comment",
-    "JsonErrorUnterminatedString": "Unterminated string",
-    "JsonErrorUnrecognizedEscapeSequence": "Unrecognized escape sequence ('{0}')",
-    "JsonErrorIllegalControlCharacterInString": "Illegal control character '{0}' in string",
-    "JsonErrorExpectedEof": "End of file expected",
-    "JsonErrorUnexpectedEofInObject": "Unexpected end of file, expected '}'",
-    "JsonErrorUnexpectedEofInArray": "Unexpected end of file, expected ']'",
+    "JsonErrorUnexpectedSymbol": "unexpected symbol '{0}'",
+    "JsonErrorUnterminatedMultiLineComment": "unterminated multi-line comment",
+    "JsonErrorUnterminatedString": "unterminated string",
+    "JsonErrorUnrecognizedEscapeSequence": "unrecognized escape sequence ('{0}')",
+    "JsonErrorIllegalControlCharacterInString": "illegal control character '{0}' in string",
+    "JsonErrorExpectedEof": "end of file expected",
+    "JsonErrorUnexpectedEofInObject": "unexpected end of file, expected '}'",
+    "JsonErrorUnexpectedEofInArray": "unexpected end of file, expected ']'",
     "JsonErrorControlSymbolInObject": "'}' expected",
     "JsonErrorControlSymbolInArray": "']' expected",
-    "JsonErrorInvalidPropertyKey": "Invalid property key",
-    "JsonErrorPropertyKeyAlreadyExists": "Key {0} already exists in object",
-    "JsonErrorMissingPropertyKey": "Missing property key",
-    "JsonErrorMissingValue": "Missing value",
-    "JsonErrorUnrecognizedValue": "Unrecognized value '{0}'",
-    "JsonErrorMultiplePropertyKeySections": "Unexpected ':', expected ',' or '}'",
+    "JsonErrorInvalidPropertyKey": "invalid property key",
+    "JsonErrorPropertyKeyAlreadyExists": "key {0} already exists in object",
+    "JsonErrorMissingPropertyKey": "missing property key",
+    "JsonErrorMissingValue": "missing value",
+    "JsonErrorUnrecognizedValue": "unrecognized value '{0}'",
+    "JsonErrorMultiplePropertyKeySections": "unexpected ':', expected ',' or '}'",
     "JsonErrorMultiplePropertyKeys": "':' expected",
     "JsonErrorMultipleValues": "',' expected",
-    "RootValueShouldBeObjectTypeError": "Expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
+    "RootValueShouldBeObjectTypeError": "expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonArray": "a value array ('[1, 2, ...]')",
     "JsonObject": "an object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "an undefined value",
     "EnumerateWithOr": "{0} or {1}",
-    "UnrecognizedPropertyKeyTypeError": "Unrecognized key {0} in object",
-    "BooleanTypeError": "Expected 'false' or 'true' value for {0}, but found {1}",
-    "IntegerTypeError": "Expected integer value for {0}, but found {1}",
-    "StringTypeError": "Expected string value for {0}, but found {1}",
-    "MapTypeError": "Expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}') for {0}, but found {1}",
-    "NoLegalValues": "Found value {1}, but there exist no legal values for {0}",
-    "EnumerationTypeError": "Expected {2} for {0}, but found {1}",
-    "KeyedSetTypeError": "Expected {2} for {0}, but found {1}",
-    "RangedIntegerTypeError": "Expected integer value between {2} and {3} for {0}, but found {1}",
-    "OpaqueColorTypeError": "Expected string in the HTML color format (e.g. \"#808000\", or \"#DC143C\") for {0}, but found {1}",
-    "FileNameTypeError": "Expected valid file name for {0}, but found {1}",
-    "SubFolderNameTypeError": "Expected valid subfolder name for {0}, but found {1}",
-    "TrimmedStringTypeError": "Expected string value which contains at least one non white-space character for {0}, but found {1}"
+    "UnrecognizedPropertyKeyTypeError": "unrecognized key {0} in object",
+    "BooleanTypeError": "expected 'false' or 'true' value for {0}, but found {1}",
+    "IntegerTypeError": "expected integer value for {0}, but found {1}",
+    "StringTypeError": "expected string value for {0}, but found {1}",
+    "MapTypeError": "expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}') for {0}, but found {1}",
+    "NoLegalValues": "found value {1}, but there exist no legal values for {0}",
+    "EnumerationTypeError": "expected {2} for {0}, but found {1}",
+    "KeyedSetTypeError": "expected {2} for {0}, but found {1}",
+    "RangedIntegerTypeError": "expected integer value between {2} and {3} for {0}, but found {1}",
+    "OpaqueColorTypeError": "expected string in the HTML color format (e.g. \"#808000\", or \"#DC143C\") for {0}, but found {1}",
+    "FileNameTypeError": "expected valid file name for {0}, but found {1}",
+    "SubFolderNameTypeError": "expected valid subfolder name for {0}, but found {1}",
+    "TrimmedStringTypeError": "expected string value which contains at least one non white-space character for {0}, but found {1}"
   }
 }
