--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -98,13 +98,12 @@
     "JsonUndefinedValue": "an undefined value",
     "EnumerateWithOr": "{0} or {1}",
     "UnrecognizedPropertyKeyTypeError": "unrecognized key {0} in object",
+    "GenericJsonTypeErrorSomewhere": "expected {0} for {2}, but found {1}",
     "BooleanTypeError": "expected 'false' or 'true' value for {0}, but found {1}",
     "IntegerTypeError": "expected integer value for {0}, but found {1}",
     "StringTypeError": "expected string value for {0}, but found {1}",
     "MapTypeError": "expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}') for {0}, but found {1}",
     "NoLegalValues": "found value {1}, but there exist no legal values for {0}",
-    "EnumerationTypeError": "expected {2} for {0}, but found {1}",
-    "KeyedSetTypeError": "expected {2} for {0}, but found {1}",
     "RangedIntegerTypeError": "expected integer value between {2} and {3} for {0}, but found {1}",
     "OpaqueColorTypeError": "expected string in the HTML color format (e.g. \"#808000\", or \"#DC143C\") for {0}, but found {1}",
     "FileNameTypeError": "expected valid file name for {0}, but found {1}",
