--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -98,13 +98,12 @@
     "JsonUndefinedValue": "een ongedefinieerde waarde",
     "EnumerateWithOr": "{0} of {1}",
     "UnrecognizedPropertyKeyTypeError": "eigenschap identificatie {0} in object niet herkend",
+    "GenericJsonTypeErrorSomewhere": "{0} voor eigenschap {2} verwacht, maar er staat {1}",
     "BooleanTypeError": "'false' of 'true' waarde voor eigenschap {0} verwacht, maar er staat {1}",
     "IntegerTypeError": "geheel getal voor eigenschap {0} verwacht, maar er staat {1}",
     "StringTypeError": "stringwaarde voor eigenschap {0} verwacht, maar er staat {1}",
     "MapTypeError": "object ('{{ \"a\" = 1, \"b\" = 2, ... }}') voor eigenschap {0} verwacht, maar er staat {1}",
     "NoLegalValues": "er staat waarde {1}, maar er bestaan geen geldige waarden voor eigenschap {0}",
-    "EnumerationTypeError": "waarde(n) {2} voor eigenschap {0} verwacht, maar er staat {1}",
-    "KeyedSetTypeError": "waarde(n) {2} voor eigenschap {0} verwacht, maar er staat {1}",
     "RangedIntegerTypeError": "geheel getal tussen {2} en {3} voor eigenschap {0} verwacht, maar er staat {1}",
     "OpaqueColorTypeError": "stringwaarde in het HTML kleur formaat (b.v. \"#808000\", of \"#DC143C\") voor eigenschap {0} verwacht, maar er staat {1}",
     "FileNameTypeError": "geldige bestandsnaam voor eigenschap {0} verwacht, maar er staat {1}",
