Add GetLocalizedMessage method to ITypeErrorBuilder interface to build errors which do not occur at property keys. Use this to refactor RootValueShouldBeObjectTypeError.

--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -92,12 +92,12 @@
     "JsonErrorMultiplePropertyKeySections": "unexpected ':', expected ',' or '}'",
     "JsonErrorMultiplePropertyKeys": "':' expected",
     "JsonErrorMultipleValues": "',' expected",
-    "RootValueShouldBeObjectTypeError": "expected object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonArray": "a value array ('[1, 2, ...]')",
     "JsonObject": "an object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "an undefined value",
     "EnumerateWithOr": "{0} or {1}",
     "UnrecognizedPropertyKeyTypeError": "unrecognized key {0} in object",
+    "GenericJsonTypeError": "expected {0}, but found {1}",
     "GenericJsonTypeErrorSomewhere": "expected {0} for {2}, but found {1}",
     "BooleanTypeError": "expected 'false' or 'true' value for {0}, but found {1}",
     "IntegerTypeError": "expected integer value for {0}, but found {1}",
