--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -92,12 +92,12 @@
     "JsonErrorMultiplePropertyKeySections": "onverwacht karakter ':', in plaats daarvan ',' of '}' verwacht",
     "JsonErrorMultiplePropertyKeys": "':' verwacht",
     "JsonErrorMultipleValues": "',' verwacht",
-    "RootValueShouldBeObjectTypeError": "object ('{{ \"a\" = 1, \"b\" = 2, ... }}') verwacht",
     "JsonArray": "een waardereeks ('[1, 2, ...]')",
     "JsonObject": "een object ('{{ \"a\" = 1, \"b\" = 2, ... }}')",
     "JsonUndefinedValue": "een ongedefinieerde waarde",
     "EnumerateWithOr": "{0} of {1}",
     "UnrecognizedPropertyKeyTypeError": "eigenschap identificatie {0} in object niet herkend",
+    "GenericJsonTypeError": "{0} verwacht, maar er staat {1}",
     "GenericJsonTypeErrorSomewhere": "{0} voor eigenschap {2} verwacht, maar er staat {1}",
     "BooleanTypeError": "'false' of 'true' waarde voor eigenschap {0} verwacht, maar er staat {1}",
     "IntegerTypeError": "geheel getal voor eigenschap {0} verwacht, maar er staat {1}",
