--- a/Bin/Languages/en.json
+++ b/Bin/Languages/en.json
@@ -102,7 +102,8 @@
     "BooleanTypeError": "'false' or 'true' value",
     "IntegerTypeError": "integer value",
     "StringTypeError": "string value",
-    "NoLegalValues": "found value {1}, but there exist no legal values for {0}",
+    "NoLegalValuesError": "found value {0}, but there exist no legal values",
+    "NoLegalValuesErrorSomewhere": "found value {0}, but there exist no legal values for {1}",
     "RangedIntegerTypeError": "expected integer value between {2} and {3} for {0}, but found {1}",
     "OpaqueColorTypeError": "string in the HTML color format (e.g. \"#808000\", or \"#DC143C\")",
     "FileNameTypeError": "valid file name",
