--- a/Bin/Languages/nl.json
+++ b/Bin/Languages/nl.json
@@ -102,7 +102,8 @@
     "BooleanTypeError": "'false' of 'true' waarde",
     "IntegerTypeError": "geheel getal",
     "StringTypeError": "stringwaarde",
-    "NoLegalValues": "er staat waarde {1}, maar er bestaan geen geldige waarden voor eigenschap {0}",
+    "NoLegalValuesError": "er staat waarde {0}, maar er bestaan geen geldige waarden",
+    "NoLegalValuesErrorSomewhere": "er staat waarde {0}, maar er bestaan geen geldige waarden voor eigenschap {1}",
     "RangedIntegerTypeError": "geheel getal tussen {2} en {3} voor eigenschap {0} verwacht, maar er staat {1}",
     "OpaqueColorTypeError": "stringwaarde in het HTML kleur formaat (b.v. \"#808000\", of \"#DC143C\")",
     "FileNameTypeError": "geldige bestandsnaam",
